<resources>
    <string name="app_name">ConcreteApp</string>
    <string name="code_0">Connection timeout</string>
    <string name="code_404">Resource not avaliable</string>
    <string name="e_session_expired">Your session has expired</string>
    <string name="e_cant_be_empty">This field can\'t be empty</string>
    <string name="e_petition">Request error</string>
    <string name="server_response">SERVER_RESPONSE</string>
    <string name="server_message">SERVER_MESSAGE</string>

    <string name="sharedPreferences">com.example.jarvis.constructionapp</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email/Mobile</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">LogIn</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Forgot_Password">Forgot Password?</string>
    <string name="SignUp">Dont have an account? SignUp</string>
    <string name="Remember_Me">Remember Me</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="title_activity_dash_board">DashBoard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Qual">Quality</string>
    <string name="Issue">Category</string>
    <string-array name="purchase_order">
        <item>Select PO</item>
        <item>Acc</item>
        <item>Ultratech</item>
        <item>Ambuja</item>
    </string-array>
    <string-array name="categoryiss">
        <item>Select Issue</item>
        <item>Quantity</item>
        <item>Quality</item>
        <item>Unsafe Condition</item>
        <item>Delay in Delivery</item>
    </string-array>
    <string-array name="Quality_Type">
        <item>M05</item>
        <item>M7.5</item>
        <item>M10</item>
        <item>M15</item>
        <item>M20</item>
        <item>M25</item>
        <item>M30</item>
        <item>M35</item>
        <item>M40</item>
        <item>M45</item>
        <item>M50</item>
        <item>M55</item>
        <item>M60</item>
        <item>M65</item>
        <item>M70</item>
        <item>M75</item>
        <item>M80</item>
        <item>M85</item>
        <item>M90</item>
        <item>M95</item>
        <item>M100</item>
    </string-array>
    <string-array name="listofplant">
        <item>Select Site</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
